<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dungeonanddragonsapp.presentation.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_data_list"
        android:name="com.example.dungeonanddragonsapp.presentation.ui.fragment.dataList.DataListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_data_list" >
        <action
            android:id="@+id/action_navigation_data_list_to_navigation_data_detail"
            app:destination="@id/navigation_data_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.dungeonanddragonsapp.presentation.ui.fragment.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_data_detail"
        android:name="com.example.dungeonanddragonsapp.presentation.ui.fragment.detail.DataDetailFragment"
        tools:layout="@layout/fragment_data_detail">
        <argument
            android:name="ItemView"
            app:argType="com.example.dungeonanddragonsapp.presentation.ui.model.item.ItemView" />
    </fragment>

</navigation>